--- a/src/pages/services/services.scss
+++ b/src/pages/services/services.scss
@@ -29,4 +29,11 @@ page-services{
 	    padding: 10px 10px 0;
 	}
 
+	.grid-cats{
+		.service.card-ios {
+			margin: 0;
+			width: 100%;
+		}
+	}
+
 }
