--- a/src/pages/service/service.scss
+++ b/src/pages/service/service.scss
@@ -153,5 +153,37 @@ page-service{
 		text-align: right;
 		display: block;
 	}
+
+	.quantity-box {
+
+		ion-label.label.label-ios{
+			> label {
+			    float: left;
+			    margin-right: 10px;
+			}
+
+			> div {
+			    float: right;
+				> input{
+					max-width: 35px;
+				    text-align: center;
+				    height: 25px;
+				    float: left;
+				    border: 1px solid #222;
+				}
+				> button {
+					background: #333;
+				    color: #fff !important;
+				    height: 25px;
+				    vertical-align: middle;
+				    display: inline-block;
+				    float: left;
+				    width: 34px;
+				    border: 1px solid #222;
+				}
+			}
+		}
+
+	} 
 }
 
